Fixed bugs: Arrows not showing in date picker. Date picker not defaulting to a date. Formatting issues on credit card payment form.

--- a/RockWeb/Themes/church_ccv_External_v8/Styles/pages/home/get-involved/giving.css
+++ b/RockWeb/Themes/church_ccv_External_v8/Styles/pages/home/get-involved/giving.css
@@ -366,6 +366,7 @@
     flex-direction: column;
     margin: 0 auto;
     width: 50%;
+    min-width: 530px;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
     transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
     border-radius: 5px;
@@ -387,6 +388,7 @@
 @media screen and (max-width: 768px) {
     .transaction-card {
         width: 100%;
+        min-width: unset;
         margin: 0;
     }
 }
@@ -650,7 +652,7 @@
     align-items: center;
     margin-top: 15px;
     min-height: 325px;
-    width: 60%;
+    width: 65%;
 }
 
 .payment-type {
@@ -1503,5 +1505,10 @@ input:checked + .slider:before {
 }
 
 /* End Transaction Entry Block */
+
+/* Override common */
+.prev, .next {
+    display: table-cell;
+}
 
 /* End Give Now */
